[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/gas/GASVirtualGamepad/GASVirtualGamepad.gd" type="Script" id=1]
[ext_resource path="res://addons/gas/GASVirtualGamepad/GASVirtualButton.gd" type="Script" id=2]
[ext_resource path="res://VirtualControllerExample.gd" type="Script" id=3]

[node name="VirtualControllerExample" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GASVirtualGamepad" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GASVirtualButton" type="Control" parent="GASVirtualGamepad"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -250.0
margin_right = -43.0
margin_bottom = -166.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
repeat_frequency = 0.5

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_right = 1.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Buttons"]
margin_left = 264.0
margin_right = 408.0
margin_bottom = 40.0
text = "Edit Mode"

[node name="SaveButton" type="Button" parent="Buttons"]
margin_left = 458.0
margin_right = 499.0
margin_bottom = 40.0
text = "Save"

[node name="LoadButton" type="Button" parent="Buttons"]
margin_left = 549.0
margin_right = 591.0
margin_bottom = 40.0
text = "Load"

[node name="DefaultButton" type="Button" parent="Buttons"]
margin_left = 641.0
margin_right = 759.0
margin_bottom = 40.0
text = "Restore Defaults"

[connection signal="pressed" from="Buttons/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="Buttons/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Buttons/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Buttons/DefaultButton" to="." method="_on_DefaultButton_pressed"]
